[gd_scene load_steps=4 format=3 uid="uid://di3sisybtygln"]

[ext_resource type="Script" path="res://boss_lightning_attack.gd" id="1_kla3u"]
[ext_resource type="SpriteFrames" uid="uid://c1cddkpte0wlr" path="res://Scenes/Boss/lightning.tres" id="2_yx8yo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bknfy"]
radius = 28.0

[node name="BossLightningAttack" type="Node2D"]
z_index = 2
script = ExtResource("1_kla3u")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -56)
sprite_frames = ExtResource("2_yx8yo")
animation = &"lightning4"

[node name="EnemyHitBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitBox"]
shape = SubResource("CircleShape2D_bknfy")

[node name="CastingTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="CastingTimer" to="." method="_on_casting_timer_timeout"]
